# y2s2-tema2-alg-genetici

./: README.md
knapsack/: CMakeLists.txt
knapsack/data/: evolution.txt  settings.txt
knapsack/src/: Chromosome.cpp  Chromosome.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  main.cpp
maximum_of_a_function/: CMakeLists.txt
maximum_of_a_function/data/: evolution.txt  settings.txt
maximum_of_a_function/src/: Chromosome.cpp  Chromosome.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  RandomGenerator.h  main.cpp
